--- a/googleChartRangeFilter2.html
+++ b/googleChartRangeFilter2.html
@@ -8,7 +8,7 @@
     google.charts.setOnLoadCallback(drawChart);
 
     function drawChart() {
-      fetch('https://ginoalexander11.github.io/Google-Chart-Git/MomData.csv')
+      fetch('MomRawData(3).csv')
         .then(response => response.text())
         .then(csvData => {
           var lines = csvData.split('\n');
