--- a/InteractiveChartScaled.html
+++ b/InteractiveChartScaled.html
@@ -8,7 +8,7 @@
     google.charts.setOnLoadCallback(drawChart);
 
     function drawChart() {
-      fetch('MomRawData(3).csv') // Updated CSV file path
+      fetch('MomDataUpdateArithmetic.csv') // Updated CSV file path
         .then(response => response.text())
         .then(csvData => {
           var lines = csvData.split('\n');
@@ -47,7 +47,8 @@
               viewWindow: {
                 max: 12000 // Set the maximum value for the y-axis
               }
-            }
+            },
+            chartArea: { height: '70%', width: '80%' } // Adjust the chart area to prevent data cut-off
           };
 
           var chart = new google.visualization.ChartWrapper({
@@ -68,7 +69,6 @@
           var dashboard = new google.visualization.Dashboard(document.getElementById('dashboard'));
           dashboard.bind(control, chart);
           dashboard.draw(data);
-
         });
     }
   </script>
