--- a/InteractiveChartScaled.html
+++ b/InteractiveChartScaled.html
@@ -8,7 +8,7 @@
     google.charts.setOnLoadCallback(drawChart);
 
     function drawChart() {
-      fetch('MomRawData(3).csv') // Updated CSV file path
+      fetch('MomDataUpdateArithmetic.csv') // Updated CSV file path
         .then(response => response.text())
         .then(csvData => {
           var lines = csvData.split('\n');
@@ -45,7 +45,8 @@
             vAxis: {
               title: 'Value',
               viewWindow: {
-                max: 12000 // Set the maximum value for the y-axis
+                min: 0,     // Set the minimum value for the y-axis
+                max: 12000  // Set the maximum value for the y-axis
               }
             },
             chartArea: { height: '70%', width: '80%' } // Adjust the chart area to prevent data cut-off
