--- a/InteractiveChartScaled.html
+++ b/InteractiveChartScaled.html
@@ -36,7 +36,7 @@
           var options = {
             width: 1400,
             height: 800,
-            title: 'Decile Performance Over Time',
+            title: 'Momentum Decile Performance',
             hAxis: {
               format: 'MM/dd/yyyy',
               slantedText: false,
